@@ -73,12 +73,11 @@
 (autoload 'plstore-save "plstore")
 (autoload 'plstore-get-file "plstore")
 
-(eval-and-compile
-  (autoload 'epg-make-context "epg")
-  (autoload 'epg-context-set-passphrase-callback "epg")
-  (autoload 'epg-decrypt-string "epg")
-  (autoload 'epg-encrypt-string "epg")
-  (autoload 'epg-context-set-armor "epg"))
+(autoload 'epg-make-context "epg")
+(autoload 'epg-context-set-passphrase-callback "epg")
+(autoload 'epg-decrypt-string "epg")
+(autoload 'epg-encrypt-string "epg")
+(autoload 'epg-context-set-armor "epg")
 
 (autoload 'help-mode "help-mode" nil t)
 
